fotorelacjonusz (2.5.1)

  * Added debian packaging script
  * Added overlay thumbnail generation (new format)
  * Added pixels per meter property for overlays
  * Overlay choice based also on ppm
  * Photo report file format changed
  * Version number and compilation time printing

 -- Kamil Ostaszewski <fotorelacjonusz@k14.vdl.pl>

fotorelacjonusz (2.5.2)

  * Windows output stream flushed
  * Compilation date time parsing bug fixed
  * Better exception handling in myexif

 -- Kamil Ostaszewski <fotorelacjonusz@k14.vdl.pl>