@@ -105,6 +105,36 @@ Jeśli nie chcesz zapisywać hasła pozostaw to pole puste, program zapyta o nie
      </property>
     </widget>
    </item>
+   <item row="6" column="1">
+    <widget class="QRadioButton" name="folderGenerate">
+     <property name="text">
+      <string>Wygeneruj nazwę folderu</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+     <attribute name="buttonGroup">
+      <string notr="true">folderMethod</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="7" column="1">
+    <widget class="QRadioButton" name="folderUseGiven">
+     <property name="text">
+      <string>Użyj poniższego folderu</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string notr="true">folderMethod</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="8" column="1">
+    <widget class="QLineEdit" name="folderEdit">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <tabstops>
@@ -115,5 +145,25 @@ Jeśli nie chcesz zapisywać hasła pozostaw to pole puste, program zapyta o nie
   <tabstop>urlEdit</tabstop>
  </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>folderUseGiven</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>folderEdit</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>234</x>
+     <y>173</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>295</x>
+     <y>198</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <buttongroups>
+  <buttongroup name="folderMethod"/>
+ </buttongroups>
 </ui>
